--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 <body>
     <div class="container">
         <div class="row">
+        <div class="row col-md-3">
+            cartes restantes
+        </div>
+        <div class="row col-md-3">
+            carte placée 1
+        </div>
+        <div class="row col-md-3">
+            carte placée 2
+        </div>
+        <div class="row col-md-3">
+            carte placée 3
+        </div>
+        </div>
+        <div class="row">
             <div id="colonne1" class="col-md-1">pile 1</div>
             <div id="colonne2" class="col-md-1">pile 2</div>
             <div id="colonne3" class="col-md-1">pile 3</div>
