--- a/index.html
+++ b/index.html
@@ -2,37 +2,27 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="melange.js" async></script>
+    <script type="text/javascript" src="solitaire.js" async></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Le Solit'R</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-        <div class="row col-md-3">
-            cartes restantes
-        </div>
-        <div class="row col-md-3">
-            carte placée 1
-        </div>
-        <div class="row col-md-3">
-            carte placée 2
-        </div>
-        <div class="row col-md-3">
-            carte placée 3
-        </div>
-        </div>
-        <div class="row">
-            <div id="colonne1" class="col-md-1">pile 1</div>
-            <div id="colonne2" class="col-md-1">pile 2</div>
-            <div id="colonne3" class="col-md-1">pile 3</div>
-            <div id="colonne4" class="col-md-1">pile 4</div>
-            <div id="colonne5" class="col-md-1">pile 5</div>
-            <div id="colonne6" class="col-md-1">pile 6</div>
-            <div id="colonne7" class="col-md-1">pile 7</div>
+    <div class="app">
+        <header>
+            <h1>Jeu du Solitaire</h1>
+        </header>
+        <div class="global">
+            <div class="element_fx" id="colonne1"></div>
+            <div class="element_fx" id="colonne2"></div>
+            <div class="element_fx" id="colonne3"></div>
+            <div class="element_fx" id="colonne4"></div>
+            <div class="element_fx" id="colonne5"></div>
+            <div class="element_fx" id="colonne6"></div>
+            <div class="element_fx" id="colonne7"></div>
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
